--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -3,7 +3,7 @@
   <div class="row">
     <a href="/admin/add-products"class=" betaButton mt-1 ml-auto" style="text-decoration: none ; color:black;width: 13rem;">ADD PRODUCTS</a>
   </div>
-  <a href="/admin/manage-categories"><span style="margin-left: 16rem;border: solid;padding: 10px;border-bottom: 0;position: absolute;margin-top: 0;background: #bebbbb;color:black;z-index: 1000;">manage category</span></a>
+  <a href="/admin/manage-categories"><span style="margin-left: 16rem;border: solid;padding: 10px;border-bottom: 0;position: absolute;margin-top: 30px;background: #bebbbb;color:black;z-index: 1000;">manage category</span></a>
  
 <table class="table mt-3" id="userTable">
   <thead>
