--- a/views/admin/salesReport.hbs
+++ b/views/admin/salesReport.hbs
@@ -13,7 +13,7 @@
    
         <div
           class="bg-light rounded h-100 p-4 col-sm-6"
-          style="width: 43rem;margin-top: 2rem;display: inline-block;top: -25.3rem;left: 39rem;">
+          style="width: 43rem;display: inline-block;top: -25.3rem;left: 39rem;">
           <h6 class="mb-4">Monthly sales</h6>
           <canvas id="monthly"></canvas>
         </div>
