--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -1,6 +1,6 @@
-<section>
+<section class="orders">
   
-<table class="table table-bordered mt-5">
+<table class="table table-bordered mt-5" id="userTable">
   <thead>
     <tr>
       <th scope="col" style="
