--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
 
-<!-- Google Web Fonts -->
+  <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,35 +18,40 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
- <!-- Customized Bootstrap Stylesheet -->
-    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link href="/stylesheets/owl.carousel.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="/stylesheets/owl.carousel.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel='stylesheet' href='/stylesheets/style2.css' />
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel='stylesheet' href='/stylesheets/style2.css' />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-   
-      <script src="https://www.paypal.com/sdk/js?client-id=Ab61LbH4MK54sMRlwO083lkQ7AzRbXccZEgT37XLB1BIGDcK-RHD6K7Dp3oF5lN-FYVPdiK1nlIjp1Ec&currency=USD"></script>
-    {{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> --}}
-   
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
-     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-      <script src="/javascripts/zoomsl.js"></script>
-    <title>{{title}}</title>
-  </head>
-  <body>
-      {{#if loginPage}}
-    {{else}}
-        {{#if admin}}
-         <div class="mt-4" style="
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=Ab61LbH4MK54sMRlwO083lkQ7AzRbXccZEgT37XLB1BIGDcK-RHD6K7Dp3oF5lN-FYVPdiK1nlIjp1Ec&currency=USD"></script>
+  {{!--
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> --}}
+
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="/javascripts/zoomsl.js"></script>
+  <title>{{title}}</title>
+</head>
+
+<body>
+  {{#if loginPage}}
+  {{else}}
+  {{#if admin}}
+  <div class="mt-4" style="
     margin-left: 16rem;
     background: #f5f5f5;
 ">
@@ -61,16 +67,16 @@
     border: 1px solid;
     border-radius: 50%;
     padding: 5px;"></i></a>
-    {{/if}} 
     {{/if}}
-    
+    {{/if}}
+
     {{{body}}}
     {{#if admin}}
-    </div>
-    {{else}}
-    {{>user-footer}}
-    {{/if}}
-    
+  </div>
+  {{else}}
+  {{>user-footer}}
+  {{/if}}
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
@@ -79,20 +85,42 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    
-   <script type="text/javascript" charset="utf8"
+
+  <script type="text/javascript" charset="utf8"
     src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
-    <script>
+  <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+  <script src="
+https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js
+    "></script>
+  <script src="
+https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js
+    "></script>
+  <script src="
+https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js
+    "></script>
+  <script src="
+https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js
+    "></script>
+  <script src="
+https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js
+    "></script>
+  <script>
     $(function () {
-    $('#userTable').DataTable();
+      $('#userTable').DataTable({
+        dom: 'Bfrtip',
+        buttons: [
+          'copy', 'csv', 'excel', 'pdf', 'print'
+        ]
+      });
     });
   </script>
-    <script src="/javascripts/script.js"></script>
-    <script src="/javascripts/app.js"></script>
-    <script src="/javascripts/validateForm.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.js"></script>
- 
+  <script src="/javascripts/script.js"></script>
+  <script src="/javascripts/app.js"></script>
+  <script src="/javascripts/validateForm.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.js"></script>
 
-  
-  </body>
+
+
+</body>
+
 </html>
