--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -1,9 +1,18 @@
 <section class="mr-4" >
 
   <div class="row">
-    <a href="/admin/add-products"class=" betaButton mt-1 ml-auto" style="text-decoration: none ; color:black;width: 13rem;">ADD PRODUCTS</a>
+    <a href="/admin/add-products"class=" betaButton mt-1 ml-auto" style="
+    position: relative;
+    width: 9rem;
+"><span style="position: absolute;
+    padding-top: 10px;">Add Products</span></a>
   </div>
-  <a href="/admin/manage-categories"><span style="margin-left: 16rem;border: solid;padding: 10px;border-bottom: 0;position: absolute;margin-top: 30px;background: #bebbbb;color:black;z-index: 1000;">manage category</span></a>
+  <a href="/admin/manage-categories" class="betaButton" style="
+    position: absolute;
+    width: 10rem;
+    top: 6.5rem;
+"><span style="position: absolute;
+    padding-top: 10px;">Manage Category</span></a>
  
 <table class="table mt-3" id="userTable">
   <thead>
