--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -23,7 +23,7 @@
       </li>
      
       <li class="nav-item pr-4">
-        <a class="nav-link" href="/orders"> <img class="icon mb-3" src="/images/order.jpg" alt="">Orders </a>
+        <a class="nav-link" href="/orders"> <img class="icon mb-3" src="/images/order.jpg" alt="">My Orders </a>
        
       </li>
        
