--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,7 +1,7 @@
  <section class="login ml-5">
    
       <div class="head pt-4 mt-3">
-        <span>Login</span>
+        <span>Start shopping | Login</span>
     </div>
     <form class="LIF" name="LIF" method="post"  action="/Login" >
         <label for="email">Email</label><br>
