--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -34,7 +34,7 @@
         </form>
        
         <div class="col-md-4">
-             <h4 class="text-left pl-3 mt-5">Add address</h4>
+             <h4 class="text-left pl-3 mt-5">Add Address</h4>
              <form  class="UFA" action="/add-address" method="post">
                <div class="col-md-12"><label class="labels">Address</label><textarea type="text" class="form-control" placeholder="enter address" value="" name="address"></textarea></div>
                     
@@ -45,7 +45,7 @@
                          <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state" name="state"></div>
                     <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value="" name="country"></div>
                   
-                    <button type="submit" style="margin-top: 2rem;" class="betaButton ml-3">Add address</button>
+                    <button type="submit" style="margin-top: 2rem;" class="betaButton ml-3">Add Address</button>
                 </div>
                 </form>
                 
@@ -55,7 +55,7 @@
     margin-left: 18rem;
     margin-top: -7rem;
 ">
-                 <h4 class="text-left pl-3 mt-5">Change password</h4>
+                 <h4 class="text-left pl-3 mt-5">Change Password</h4>
                  
                 <form class="SUF" name="SUF" action="/change-password" method="post">
        
@@ -66,7 +66,7 @@
         <label for="newPassword" class="labels">Re-enter New Password</label>
         <input type="password" name="confirmPassword2" placeholder="new password..." class="form-control">
         <br>
-        <button type="submit">change password</button>
+        <button type="submit">Change Password</button>
    
     </form>
     </div>
