--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -276,7 +276,7 @@ body {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 800;
-  font-size: 50px;
+  font-size: 39px;
   line-height: 60px;
   /* or 100% */
 
@@ -293,7 +293,16 @@ body {
   line-height: 49px;
   letter-spacing: -0.05em;
 }
-
+.cart .badge{
+  font-size: 1.5rem;
+}
+nav .dropdown-menu{
+  margin-left: -6rem;
+  margin-top: 2rem;
+}
+nav .dropdown{
+  margin-right: 1rem;
+}
 .LIF input {
   background: #ffffff;
   border: 2px solid #000000;
@@ -472,19 +481,32 @@ body {
   margin-top: -2px;
   z-index: 1000;
 }
+/* From uiverse.io by @niat786 */
 .betaButton {
-  width: 189px;
-  height: 38px;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 21px;
-  line-height: 28px;
-  text-align: center;
-  color: #111111;
-  background-color: #ffffff;
-  border: solid;
-}
+  font-family: PlusJakartaSans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Cantarell,Helvetica Neue,Ubuntu,sans-serif;
+  font-size: 1rem;
+  align-items: center;
+  height: 48px;
+  border-radius: 0.4rem;
+  font-weight: 600;
+  padding: 0 1.2rem;
+  color: #ddd;
+  border: none;
+  box-shadow: 0 .5rem 1rem rgba(143, 142, 142, 0.15)!important;
+  background: #000000;
+ }
+ 
+
+ 
+ .betaButton:hover {
+  background: #2b2a2a;
+ }
+ 
+ .orders .dt-buttons{
+  display: none;
+ }
+ 
+ /*  */
 .addProducts select {
   width: 33rem;
   height: 2.5rem;
@@ -600,4 +622,7 @@ body {
 }
 .orders .dataTables_length{
   display: none;
+}
+.cart{
+margin-top: 5rem;
 }
