--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -1,16 +1,12 @@
 <section class="orders">
   
-<table class="table table-bordered mt-5" id="userTable">
+<table class="table table-bordered mt-5" id="userTable"style="margin-left:5rem;border:0">
   <thead>
     <tr>
-      <th scope="col" style="
-    width: 19rem;
-">Date</th>
-      <th scope="col" style="
-    width: 16rem;
-">Address</th>
+     
+     
       <th scope="col">Amount</th>
-      <th scope="col">Payment</th>
+     
       <th scope="col">Status</th>
        <th scope="col" style="
     width: 19rem;
@@ -20,11 +16,11 @@
   <tbody>
     {{#each orders}}
     <tr>
-      <th scope="row">{{this.date}}</th>
-      <td scope="row">{{this.deliveryDetails.address}}</td>
+     
+    
 
       <td scope="row">{{this.totalAmount}}</td>
-      <td scope="row">{{this.payment_Method}}</td>
+   
       <td scope="row"  id="status{{this._id}}" >{{this.status}}</td>
       
       <td scope="row"><a href="/orderProducts?id={{this._id}}"class="betaButton">View Products</a>
